Fix spacing of save content

--- a/Projekt/drop_down.css
+++ b/Projekt/drop_down.css
@@ -49,7 +49,6 @@ body {
 	padding-left: 1rem !important;
 	padding-right: 1rem !important;
 	margin-right: .5rem;
-	word-wrap: break-word;
 }
 
 #int-level, #ext-level {
